PRE-RELIASE-4 1.0: Reload project | Clean code, update readmes, fix more bugs

--- a/src/main/resources/data/database.yml
+++ b/src/main/resources/data/database.yml
@@ -1,7 +1,8 @@
 # Database settings
+Database:
+  type: "SQLITE" # Only SQLITE
 
-database:
-  type: "SQLITE" #Only SQLITE
 
 # Don't edit this
+# Не редактируйте это
 config_version: 1.0
