--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,21 +13,22 @@
 # • GitHub: https://github.com/ilezzov-code
 
 # Plugin Pages / Страницы плагинов:
-# • Modrinth: https://modrinth.com/plugin/cool-lobby
-# • Spigot: https://www.spigotmc.org/resources/coallobby-fun-commands-for-your-lobby-1-13-1-19x.108887/
-# • CurseForge: https://www.curseforge.com/minecraft/bukkit-plugins/coollobby
+# • Modrinth:
+# • Spigot:
+# • CurseForge:
+# • Hangar:
 
 # By me coffee / Поддержать разработчика:
 # • DA: https://www.donationalerts.com/r/ilezzov_dev
 # • YooMoney: https://yoomoney.ru/fundraise/193CD8F13OH.250319
 # • Telegram Gift: https://t.me/ilezovofficial
-# • TON: UQCsMXvc2og_Sn91TJ8NsHTU9qyvx6qJPZ4TjEJTPdUY0Fes
+# • TON: UQCInXoHOJAlMpZ-8GIHqv1k0dg2E4pglKAIxOf3ia5xHmKV
+# • BTC: 1KCM1QN9TNYRevvQD63UF81oBRSK67vCon
 # • Card: 5536914188326494
 
 # Supporting messages languages / Доступные языки сообщений:
 # • Русский (ru-RU)
 # •  English (en-US)
-# •  Český (cs-CZ)
 language: "ru-RU"
 
 # Check the plugin for updates
@@ -35,9 +36,12 @@ language: "ru-RU"
 check_updates: true
 
 lobby_settings:
-  # The name of the lobby world
+  # The names of the lobby worlds
   # Имя lobby мира
-  world: "world"
+  worlds:
+    - world
+    - lobby-1
+    - lobby-2
 
   # Disable damage
   # Отключить получение урона
@@ -87,8 +91,8 @@ lobby_settings:
     enable: true
     level: 2025
 
-# /firework command. Permission: cool-lobby.fw
-# /firework команда. Права: cool-lobby.fw
+# /firework command. Permission: coollobby.fw
+# /firework команда. Права: coollobby.fw
 fw_command:
   # Enable the command / Включить команду
   enable: true
@@ -117,8 +121,8 @@ spit_command:
   # Cooldown command in seconds / Задержка на использование в секундах
   cooldown: 10
 
-# /fly command. Permission: cool-lobby.fly
-# /fly команда. Права: cool-lobby.fly
+# /fly command. Permission: coollobby.fly
+# /fly команда. Права: coollobby.fly
 fly_command:
   # Enable the command / Включить команду
   enable: true
@@ -126,21 +130,6 @@ fly_command:
   only_lobby: true
   # Cooldown command in seconds / Задержка на использование в секундах
   cooldown: 10
-
-# Double Jump
-# Двойной прыжок
-double_jump:
-  enable: true
-  cooldown: 10
-  # Use double jump only lobby world
-  only_lobby: true
-  double_jump_sound:
-    enable: true
-    sound: ENTITY_EXPERIENCE_ORB_PICKUP
-  double_jump_particle:
-    enable: true
-    particle: FLAME
-
 # Join actions
 # Действия при входе игрока
 player_join:
@@ -162,7 +151,20 @@ player_join:
 player_leave:
   global_leave_message:
     enable: true
-    message: true
+
+# Double Jump
+# Двойной прыжок
+double_jump:
+  enable: true
+  cooldown: 10
+  # Use double jump only lobby world
+  only_lobby: true
+  double_jump_sound:
+    enable: true
+    sound: ENTITY_EXPERIENCE_ORB_PICKUP
+  double_jump_particle:
+    enable: true
+    particle: FLAME
 
 # Don't edit this
 # Не редактируйте это
