--- a/src/main/resources/messages/en-US.yml
+++ b/src/main/resources/messages/en-US.yml
@@ -1,54 +1,36 @@
-#The plugin supports all types of message formatting.
-# LEGACY — Color through & / § and HEX through &#rrggbb / §#rrggbb or &x&r&r&g&g&b&b / §x§r§r§g§g§b§b
-# LEGACY_ADVANCED — Color and HEX through &##rrggbb / §##rrggbb
-# MINI_MESSAGE — Color through <цвет> More detailed — https://docs.advntr.dev/minimessage/index.html
-# And all the formats available on https://www.birdflop.com/resources/rgb/
-# Вы можете использовать все форматы одновременно в одном сообщении. Плагин это поддерживает
-# You can use all formats simultaneously in one message. The plugin supports this
+# The plugin supports all types of message formatting.
+# LEGACY — Colors via & / § and HEX via &#rrggbb / §#rrggbb or &x&r&r&g&g&b&b / §x§r§r§g§g§b§b
+# LEGACY_ADVANCED — Colors and HEX via &##rrggbb / §##rrggbb
+# MINI_MESSAGE — Colors via <color>. More details: https://docs.advntr.dev/minimessage/index.html
+# And all formats available at https://www.birdflop.com/resources/rgb/
+# You can use all formats simultaneously in a single message. The plugin supports this.
 
 Plugin:
-  plugin-prefix: "&6CoolLobby &8|" #The prefix plugin. Use {P} in messages
-  plugin-reload: "{P} &7The plugin has been successfully &areloaded"
-  plugin-has-error: "{P} &7An error occurred: &c{ERROR}"
-  plugin-has-error-enable: "{P} &7An error occurred while starting the plugin: &c{ERROR}"
+  plugin-prefix: "&6PluginBlank &8|" # Plugin prefix. Use {P} in messages
+  plugin-reload: "{P} &7Plugin successfully &areloaded"
   plugin-has-error-reload: "{P} &7An error occurred while reloading the plugin: &c{ERROR}"
   plugin-use-latest-version: "{P} &7You are using the &alatest &7version of the plugin"
-  plugin-use-outdated-version: "{P} &7You are using an outdated version: &c{OUTDATED_VERS} \n&7It is recommended to install the latest version of the plugin: &6{LATEST_VERS} \n&7Download: <click:open_url:{DOWNLOAD_LINK}>&e{DOWNLOAD_LINK}"
+  plugin-use-outdated-version: "{P} &7You are using an outdated version: &c{OUTDATED_VERS} \n&7It is recommended to install the latest version: &6{LATEST_VERS} \n&7Download: <click:open_url:{DOWNLOAD_LINK}>&e{DOWNLOAD_LINK}"
 
 Messages:
   command-permission-error: "{P} &cYou do not have permission to execute this command O_o"
-  command-no-console-error: "{P} &cThis command is only available to players!"
+  command-no-console-error: "{P} &cThis command is only available for players!"
   command-cooldown: "{P} &7Please wait &6{TIME} &7seconds before using this command again"
   command-disable: "{P} &7This command has been disabled by the server administrator"
   command-only-lobby-use: "{P} &7This command is only available in &6{WORLD}"
 
   command-main-message: "{P} &7Plugin command help: \n\n
-    &e/fw &7— launch a firework \n
-    &e/lt &7— strike with lightning \n
-    &e/spit &7— spit \n
-    &e/fly &7— toggle flight mode \n
-    &e/cool-lobby &7— send this message \n
-    &e/cool-lobby reload &7— reload the plugin \n\n
+    &e/plugin-blank &7— send this message \n
+    &e/plugin-blank reload&7— reload the plugin \n\n
   &7Developer: &6{DEVELOPER} \n
   &7Contact: <click:open_url:{CONTACT_LINK}>&e{CONTACT_LINK}"
 
-  command-firework-message: "{P} &7Firework!"
-  command-lighting-message: "{P} &7Lightning!"
-  command-spit-message: "{P} &7Spit!"
-  command-fly-enable-message: "{P} &7Flight mode &aenabled! &7You can now fly"
-  command-fly-disable-message: "{P} &7Flight mode &cdisabled! &7You can now double jump"
-
   player-join-message: "{P} &7Welcome, &6{NAME}!"
   player-join-global-message: "{P} &6{NAME}&7 has joined the server"
-
-  player-leave-global-message: "{P} &6{NAME}&7 has left our wonderful server"
-
-  double-jump-jump-message: "{P} &7Wow! What a jump"
-  double-jump-cooldown-message: "{P} &7Please wait &6{TIME} &7seconds before jumping again"
 
 Title:
   player-join-title: "&6&lWelcome to the server!"
   player-join-subtitle: "&7Wipe on &cAnarchy &7and &cGrief"
 
-# Don't edit this
+# Do not edit this
 config_version: 1.0
