--- a/CoolLobby-Plugin/pom.xml
+++ b/CoolLobby-Plugin/pom.xml
@@ -92,5 +92,20 @@
       <artifactId>caffeine</artifactId>
       <version>3.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.41.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.28</version>
+    </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.7.7</version>
+    </dependency>
   </dependencies>
 </project>
